[metadata]
name = yaql
summary = YAQL - Yet Another Query Language
description-file =
    README.rst
author = Stan Lagun
author-email = slagun@mirantis.com
home-page = https://launchpad.net/yaql
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    yaql

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = yaql/locale
domain = yaql

[update_catalog]
domain = yaql
output_dir = yaql/locale
input_file = yaql/locale/yaql.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = yaql/locale/yaql.pot

[entry_points]
console_scripts =
    yaql = yaql.cli.run:main
