[metadata]
name = yaql
summary = YAQL - Yet Another Query Language
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://yaql.readthedocs.io
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    yaql

[compile_catalog]
directory = yaql/locale
domain = yaql

[update_catalog]
domain = yaql
output_dir = yaql/locale
input_file = yaql/locale/yaql.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = yaql/locale/yaql.pot

[entry_points]
console_scripts =
    yaql = yaql.cli.run:main
